# chromagora-os

./: .aider.chat.history.md  .aider.input.history  .env.example  .gitignore  AGENTS.md  README.md  SUPABASE_ARCHITECTURE.md  pytest.ini
apps/api/: README.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
apps/api/chromagora_api/: __init__.py  main.py
apps/api/chromagora_api/core/: auth.py  config.py  errors.py  ratelimit.py  supabase.py
apps/api/chromagora_api/db/: __init__.py  base.py  tenant.py
apps/api/chromagora_api/routes/: agent_tasks.py  agents.py  approvals.py  authority.py  autonomy.py  businesses.py  crm.py  demo.py  demo_sites.py  health.py  ledger.py  memory.py  mobile.py  opportunities.py  procurement.py  quote_follow_up.py  tools.py  voice.py  workflows.py
apps/api/chromagora_api/services/: action_executor.py  agent_registry.py  agent_runs.py  autonomy_scorecard.py  context_builder.py  crm_integration.py  crm_service.py  demo_deployment_service.py  demo_factory_importer.py  demo_frameworks.py  demo_link_drop_importer.py  demo_slug_service.py  email_provider.py  email_service.py  eval_runner.py  event_dispatcher.py  mobile_service.py  policy_kernel.py  procurement_agent.py  quote_stale_detector.py  quote_stale_handler.py  reputation_agent.py  runtime_utils.py  sales_agent.py  tactical_subagent.py  token_budget.py  (+7 more)
apps/api/tests/: test_quote_follow_up_live.py  test_quote_follow_up_runtime.py
apps/workers/: README.md  pyproject.toml
apps/workers/chromagora_workers/: __init__.py  demo_factory_worker.py  stale_quote_worker.py
(+195 files in other folders)
