[project]
name = "chromagora-api"
version = "0.1.0"
description = "Chromagora OS API — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "supabase>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chromagora_api"]

[tool.pytest.ini_options]
testpaths = ["chromagora_api/tests"]
pythonpath = [".", "../../packages/schemas", "../../apps/workers"]
addopts = "--import-mode=importlib"
