[project]
name = "chromagora-workers"
version = "0.1.0"
description = "Chromagora OS workers — LLM, pipelines, scheduler"
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.10.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chromagora_workers"]
